Update index.html with reveal definition and next buttons

--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
       </form>
 
       <div id="feedback" class="feedback"></div>
+      <div id="canon" class="feedback" style="margin-top:8px;"></div>
 
       <div class="actions">
-        <button id="skipBtn" class="ghost">Skip</button>
-        <button id="showBtn" class="ghost">Show hint</button>
+        <button id="revealBtn" class="ghost" type="button">Reveal canonical definition</button>
+        <button id="skipBtn" class="ghost" type="button">Skip</button>
+        <button id="nextBtn" class="primary" type="button">Next word ⮕</button>
       </div>
     </section>
 
