Update index.html with appv2

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </footer>
   </main>
 
-  <!-- cache-bust the script so the new JS actually loads -->
-  <script src="app.js?v=4"></script>
+  <!-- Use a NEW filename to force fresh load -->
+  <script src="app.v2.js"></script>
 </body>
 </html>
